load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "http.go",
        "logger.go",
        "periodic.go",
        "stats.go",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_github_valyala_fasthttp//:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "http_test.go",
        "logger_test.go",
        "periodic_test.go",
        "stats_test.go",
    ],
    library = ":go_default_library",
)
