load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "http.go",
        "httprunner.go",
        "logger.go",
        "periodic.go",
        "stats.go",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "http_test.go",
        "httprunner_test.go",
        "logger_test.go",
        "periodic_test.go",
        "stats_test.go",
    ],
    library = ":go_default_library",
)
