load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["githubContrib.go"],
    visibility = ["//visibility:private"],
)

go_binary(
    name = "githubContrib",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_test(
    name = "small_test",
    srcs = ["githubContrib_test.go"],
    size = "small",
    library = ":go_default_library",
)
