load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "inventory.gen.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//mixer/adapter/circonus:go_default_library",
        "//mixer/adapter/denier:go_default_library",
        "//mixer/adapter/kubernetesenv:go_default_library",
        "//mixer/adapter/list:go_default_library",
        "//mixer/adapter/memquota:go_default_library",
        "//mixer/adapter/opa:go_default_library",
        "//mixer/adapter/noop:go_default_library",
        "//mixer/adapter/prometheus:go_default_library",
        "//mixer/adapter/servicecontrol:go_default_library",
        "//mixer/adapter/stackdriver:go_default_library",
        "//mixer/adapter/statsd:go_default_library",
        "//mixer/adapter/stdio:go_default_library",
        "//mixer/adapter/solarwinds:go_default_library",
        "//mixer/pkg/adapter:go_default_library",
    ],
)
