load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//test/mixer/istio_mixer_v1:go_default_library",
        "//test/mixer/wordlist:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library",
        "@com_github_googleapis_googleapis//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
