load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "echosrv",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["echo.go"],
    visibility = ["//visibility:private"],
    deps = ["//devel/fortio:go_default_library"],
)
