load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "ping.pb.go",
        "pingsrv.go",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//devel/fortio:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//health:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "grpcping",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "go_default_library_protos",
    srcs = ["ping.proto"],
    visibility = ["//visibility:public"],
)
