load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "ping.pb.go",
        "pingsrv.go",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_binary(
    name = "pingsrv",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "go_default_library_protos",
    srcs = ["ping.proto"],
    visibility = ["//visibility:public"],
)
