# gazelle:ignore
load("@io_bazel_rules_go//proto:go_proto_library.bzl", "go_proto_library")

genrule(
    name = "protos",
    srcs = ["@io_istio_api//:mixer"],
    outs = ["mixer.proto"],
    cmd = "cat $(locations @io_istio_api//:mixer) | $(location proto_process.sh) > $@",
    tools = ["proto_process.sh"],
)

go_proto_library(
    name = "go_default_library",
    srcs = [":mixer.proto"],
    has_services = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//ptypes/any:go_default_library",
        "@com_github_golang_protobuf//ptypes/duration:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
        "@com_github_golang_protobuf//ptypes/wrappers:go_default_library",
        "@com_github_googleapis_googleapis//:go_default_library",
    ],
)
